[package]
name = "unicode-width-utils"
version = "0.1.4"
edition = "2024"
description = "A thin-wrapper for the `unicode-width` crate with additional functionalities"
authors = ["Koji Ishii <kojiishi@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/kojiishi/unicode-width-utils"
documentation = "https://docs.rs/unicode-width-utils/"
readme = "README.md"
keywords = ["unicode", "unicode-width", "text", "cjk"]
categories = ["internationalization", "text-processing"]
exclude = [".github", ".gitignore", ".vscode", "Taskfile.yml"]

[dependencies]
unicode-width = "0.2.2"
